Fixing things that Google Lighthouse pointed out as problems and attempting to fix issue on iPhone 6S Plus

--- a/themes/hugo-flex-mst/assets/css/custom.css
+++ b/themes/hugo-flex-mst/assets/css/custom.css
@@ -5,7 +5,7 @@ a.Banner-link{
 	text-align: center;
 }
 a.Banner-link img{
-	margin-bottom: 1em;
+	margin: 0 auto 1em;
 }
 
 .u-background{
